--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,5 +1,5 @@
 ---
-title: 文章
+title: 随笔
 layout: default
 ---
 
@@ -17,7 +17,7 @@ layout: default
 		<div class="container" style="margin:0;padding:0;width:100%;">
 			<header>
 				<img width="175" height="175" style="border-radius:50%;" src="/img/avatar-hux-ny.jpg">
-				<h1>Hux</h1>
+				<h1>区块牛虻</h1>
 			</header>
 			<div class="main">
 				<ul class="cbp_tmtimeline">
